--- a/classes.html
+++ b/classes.html
@@ -1,3 +1,4 @@
+<DOCTTYPE! html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
     <title>Path of Light Yoga Studio</title> 
@@ -5,11 +6,13 @@
 </head>
     <body>
     <header>
-        <h1>Path of Light Yoga Studio</h1>
-        <a href ="index.html">Home</a> &#xA0; &#xA0;
-        <a href ="classes.html">Classes</a> &#xA0; &#xA0;
-        <a href ="schedule.html">Schedule</a> &#xA0; &#xA0;
-        <a href ="contact.html">Contact</a>
+        <strong>
+            <h1>Path of Light Yoga Studio</h1>
+            <a href ="index.html">Home</a> &#xA0; &#xA0;
+            <a href ="classes.html">Classes</a> &#xA0; &#xA0;
+            <a href ="schedule.html">Schedule</a> &#xA0; &#xA0;
+            <a href ="contact.html">Contact</a>
+        </strong>
     </header>
     <main>
         <h2>Yoga Classes</h2>
