--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     </head>
     <body>
         <header>
-            <h1>Path of Light Yoga Studio</h1>
-            <a href ="index.html">Home</a> &#xA0; &#xA0;
-            <a href ="classes.html">Classes</a> &#xA0; &#xA0;
-            <a href ="schedule.html">Schedule</a> &#xA0; &#xA0;
-            <a href ="contact.html">Contact</a>
+            <strong>
+                <h1>Path of Light Yoga Studio</h1>
+                <a href ="index.html">Home</a> &#xA0; &#xA0;
+                <a href ="classes.html">Classes</a> &#xA0; &#xA0;
+                <a href ="schedule.html">Schedule</a> &#xA0; &#xA0;
+                <a href ="contact.html">Contact</a>
+            </strong>
         </header>
     <main>
         <h2>Find Your Inner Light</h2>
