--- a/classes.html
+++ b/classes.html
@@ -1,24 +1,26 @@
-<DOCTTYPE! html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-    <title>Path of Light Yoga Studio</title> 
+    <title>Path of Light Yoga Studio  :: Classes</title> 
     <meta charset="UTF-8"/>   
+    <link rel="stylesheet" type = "text/css" href = "yoga.css" />
 </head>
-    <body>
+<body>
+    <div id = "wrapper">
     <header>
-        <strong>
-            <h1>Path of Light Yoga Studio</h1>
-            <a href ="index.html">Home</a> &#xA0; &#xA0;
-            <a href ="classes.html">Classes</a> &#xA0; &#xA0;
-            <a href ="schedule.html">Schedule</a> &#xA0; &#xA0;
-            <a href ="contact.html">Contact</a>
-        </strong>
+        <h1>Path of Light Yoga Studio</h1>
     </header>
+        <nav>
+                <a href ="index.html">Home</a> &#xA0; &#xA0;
+                <a href ="classes.html">Classes</a> &#xA0; &#xA0;
+                <a href ="schedule.html">Schedule</a> &#xA0; &#xA0;
+                <a href ="contact.html">Contact</a>
+        </nav>
     <main>
         <h2>Yoga Classes</h2>
         <dl>
             <dt><b>Gentle Hatha Yoga</b></dt>
-                <dd>A 60 minute class of poses and slow movement that focuses on asana (proper alignment and posture), and guided meditation to foster your mind and body connection. This class is intended for beginners and anyone wishing a grounded foundation in the practice of yoga.</dd>
+                <dd>A 60 minute class of poses and slow movement that focuses on asana (proper alignment and posture), pranayama (breath work), and guided meditation to foster your mind and body connection. This class is intended for beginners and anyone wishing a grounded foundation in the practice of yoga.</dd>
             <dt><b>Vinyasa Yoga</b></dt>
                 <dd>A 60 minute class that focuses on breath-synchronized movement &#x2014; you will inhale and exhale as you flow energetically through yoga poses. While intended for intermediate to advanced students, beginners are welcome to join in this class.</dd>
             <dt><b>Restorative Yoga</b></dt>
@@ -26,8 +28,9 @@
         </dl>
     </main>
     <footer>
-        <p><i><small>Copyright &#xA9; 2022 Path of Light Yoga Studio<br />
-        <a href ="mailto:ian@andlerpascual.com">ian@andlerpascual.com</a></small></i></p>
+        <p>Copyright &#xA9; 2022 Path of Light Yoga Studio<br />
+        <a href ="mailto:ian@andlerpascual.com">ian@andlerpascual.com</a></p>
     </footer>
+    </div>
 </body>
 </html> 
