--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang:"en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
     <head>
+        
         <title>Path of Light Yoga Studio</title> 
         <meta charset="UTF-8"/>   
+        <link rel="stylesheet" type = "text/css" href = "yoga.css" />
     </head>
     <body>
-        <header>
-            <strong>
+        <div id = "wrapper">
+            <header>
                 <h1>Path of Light Yoga Studio</h1>
+            </header>
+            <nav>
                 <a href ="index.html">Home</a> &#xA0; &#xA0;
                 <a href ="classes.html">Classes</a> &#xA0; &#xA0;
                 <a href ="schedule.html">Schedule</a> &#xA0; &#xA0;
                 <a href ="contact.html">Contact</a>
-            </strong>
-        </header>
-    <main>
-        <h2>Find Your Inner Light</h2>
-        <p>Path of Light Yoga Studio welcomes all to experience a yoga practice in a tranquil, peaceful environment. Our studio offers classes for every level, From beginner to advanced. Whether you are new to yoga or have been practicing yoga for years, our dedicated instructors can modify a practice to help you improve your well-being. Let your inner light shine at the Path of Light Yoga Studio.</p>
-        <ul>
-            <li>Hatha, Vinyasa, and Restorative Yoga classes</li>
-            <li>Drop-ins welcome</li>
-            <li>Mats, blocks and blankets provided</li>
-            <li>Relax in our Serenity Lounge before or after your class</li>
-        </ul>
-    </main>
-        <footer>
-            <p>Path of Light Yoga Studio <br /> 
+            </nav>
+            <main>
+                <h2>Find Your Inner Light</h2>
+                <p><span class = "studio">Path of Light Yoga Studio</span> welcomes all to experience a yoga practice in a tranquil, peaceful environment. Our studio offers classes for every level, From beginner to advanced. Whether you are new to yoga or have been practicing yoga for years, our dedicated instructors can modify a practice to help you improve your well-being. Let your inner light shine at the <span class = "studio">Path of Light Yoga Studio.</span></p>
+                <ul>
+                    <li>Hatha, Vinyasa, and Restorative Yoga classes</li>
+                    <li>Drop-ins welcome</li>
+                    <li>Mats, blocks and blankets provided</li>
+                    <li>Relax in our Serenity Lounge before or after your class</li>
+                </ul>
+            </main>
+            <p><span class ="studio">Path of Light Yoga Studio</span><br />
             612 Serenity Way <br />
             El Dorado, CA 96162</p>
             <p>888-555-5555</p>
-            <p><i><small>Copyright &#xA9; 2022 Path of Light Yoga Studio<br />
-            <a href ="mailto:ian@andlerpascual.com">ian@andlerpascual.com</a></small></i></p>
-        </footer>
+            <footer>
+                <p>Copyright &#xA9; 2022 Path of Light Yoga Studio<br />
+                <a href ="mailto:ian@andlerpascual.com">ian@andlerpascual.com</a></p>
+            </footer>
+        </div>
     </body>
 </html>
