--- a/classes.html
+++ b/classes.html
@@ -17,6 +17,9 @@
                 <a href ="contact.html">Contact</a>
         </nav>
     <main>
+        <div id = "hero">
+            <img src = "yogamat.jpg" alt="yogamat" width="900" height="300" />
+        </div>
         <h2>Yoga Classes</h2>
         <dl>
             <dt><b>Gentle Hatha Yoga</b></dt>
