--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href ="contact.html">Contact</a>
             </nav>
             <main>
+                <img src = "yogadoor.jpg" alt = "yoga door" height="300" width="225" style = "float: right"/>
                 <h2>Find Your Inner Light</h2>
                 <p><span class = "studio">Path of Light Yoga Studio</span> welcomes all to experience a yoga practice in a tranquil, peaceful environment. Our studio offers classes for every level, From beginner to advanced. Whether you are new to yoga or have been practicing yoga for years, our dedicated instructors can modify a practice to help you improve your well-being. Let your inner light shine at the <span class = "studio">Path of Light Yoga Studio.</span></p>
                 <ul>
@@ -26,11 +27,11 @@
                     <li>Mats, blocks and blankets provided</li>
                     <li>Relax in our Serenity Lounge before or after your class</li>
                 </ul>
+                <p><span class ="studio">Path of Light Yoga Studio</span><br />
+                612 Serenity Way <br />
+                El Dorado, CA 96162</p>
+                <p>888-555-5555</p>
             </main>
-            <p><span class ="studio">Path of Light Yoga Studio</span><br />
-            612 Serenity Way <br />
-            El Dorado, CA 96162</p>
-            <p>888-555-5555</p>
             <footer>
                 <p>Copyright &#xA9; 2022 Path of Light Yoga Studio<br />
                 <a href ="mailto:ian@andlerpascual.com">ian@andlerpascual.com</a></p>
