--- a/Schedule.html
+++ b/Schedule.html
@@ -27,7 +27,7 @@
             <li>9:00am Gentle Hatha Yoga</li>
             <li>10:30am Vinyasa Yoga</li>
             <li>5:30pm Restorative Yoga</li>
-            <li>7:00pm Gentle
+            <li>7:00pm Gentle</li>
         </ul>
         <h3>Saturday &amp; Sunday</h3>
         <ul>
